--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:uno]
+[env]
 platform = atmelavr
 board = uno
 framework = arduino
@@ -16,3 +16,15 @@ lib_deps =
 	adafruit/Adafruit BusIO@^1.17.4
 	adafruit/Adafruit GFX Library@^1.12.3
 	adafruit/Adafruit ST7735 and ST7789 Library@^1.11.0
+
+[env:release]
+build_type = release
+lib_deps = 
+	${env.lib_deps}
+
+[env:debug]
+build_type = debug
+build_flags = -D DEBUG -D PROFILING
+; build_flags = -D DEBUG -D SERIAL_DEBUG
+lib_deps = 
+	${env.lib_deps}
