add print/profiler debug build configs

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,9 +22,14 @@ build_type = release
 lib_deps = 
 	${env.lib_deps}
 
-[env:debug]
+[env:debug_profiling]
 build_type = debug
 build_flags = -D DEBUG -D PROFILING
-; build_flags = -D DEBUG -D SERIAL_DEBUG
+lib_deps = 
+	${env.lib_deps}
+
+[env:debug_printing]
+build_type = debug
+build_flags = -D DEBUG -D SERIAL_DEBUG
 lib_deps = 
 	${env.lib_deps}
